Fixed P elements overflowing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -601,6 +601,10 @@ article header {
     margin-bottom: 3rem;
 }
 
+p {
+  overflow: scroll;
+}
+
 @-webkit-keyframes nprogress-spinner{
     0%{
         -webkit-transform:rotate(0)
